follow and friendship controller fixed